WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308996
WebContentRestrictionsAskTo Runtime Flag should not be hard-coded to false
https://bugs.webkit.org/show_bug.cgi?id=308996
Summary
WebContentRestrictionsAskTo Runtime Flag should not be hard-coded to false
jlee53
Reported
2026-03-02 11:10:32 PST
We should dynamically set the value of the WebContentRestrictionsAskTo Runtime Flag based on the system's value.
Attachments
Add attachment
proposed patch, testcase, etc.
jlee53
Comment 1
2026-03-02 11:16:52 PST
<
rdar://problem/171054954
>
jlee53
Comment 2
2026-03-02 11:19:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59731
EWS
Comment 3
2026-03-02 15:39:29 PST
Committed
308488@main
(573d332590d5): <
https://commits.webkit.org/308488@main
> Reviewed commits have been landed. Closing PR #59731 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug