WebContentRestrictionsAskTo Runtime Flag should not be hard-coded to false https://bugs.webkit.org/show_bug.cgi?id=308996 rdar://171054954

Reviewed by Sihui Liu and Tadeu Zagallo.

We should dynamically set the value of the WebContentRestrictionsAskT's runtime flag based on
the system's value.

No new tests needed.
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/Cocoa/WebPreferencesDefaultValuesCocoa.mm:
(WebKit::defaultWebContentRestrictionsAskToEnabled):
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/308488@main